# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import dashboardRouter from "./dashboard";
 import clientsRouter from "./clients";
 import plansRouter from "./plans";
+import businessesRouter from "./businesses";
 import campaignsRouter from "./campaigns";
 import keywordsRouter from "./keywords";
 import backlinksRouter from "./backlinks";
@@ -17,6 +18,7 @@ router.use(authRouter);
 router.use(dashboardRouter);
 router.use(clientsRouter);
 router.use(plansRouter);
+router.use(businessesRouter);
 router.use(campaignsRouter);
 router.use(keywordsRouter);
 router.use(backlinksRouter);
